syntax = "proto3";

package request.v1;

import "google/protobuf/struct.proto";
import "validate/validate.proto";

option go_package = "github.com/cerbos/cerbos/internal/genpb/request/v1;requestv1";

message CheckRequest {
    string request_id = 1;
    Resource resource = 2 [(validate.rules).message.required = true];
    Principal principal = 3 [(validate.rules).message.required = true];
    string action = 4 [(validate.rules).string.min_len = 1];

}

message Resource {
    string name = 1 [(validate.rules).string = {pattern: "^[[:alpha:]][[:word:]\\@\\.\\-]*(\\:[[:alpha:]][[:word:]\\@\\.\\-]*)*$", min_len: 1}];
    string policy_version = 2 [(validate.rules).string.pattern = "^[[:word:]]*$"];
    map<string,google.protobuf.Value> attr = 3 [(validate.rules).map.no_sparse = true];
}

message Principal {
    string id = 1 [(validate.rules).string = {min_len: 1}];
    string policy_version = 2 [(validate.rules).string.pattern = "^[[:word:]]*$"];
    repeated string roles = 3 [(validate.rules).repeated = { unique: true, min_items: 1, items { string { pattern: "^[[:word:]\\-\\.]+$" } } }];
    map<string, google.protobuf.Value> attr = 4 [(validate.rules).map.no_sparse = true];
}

